# sample-agents

./: .gitignore  CLAUDE.md
cc-agent/: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  agents.py  mcp_pcm.py  prompt.py  runner.py
docs/: RESULT.md  pac1-py-architecture-audit.md  pac1-py-fixes.md  qwen3.5-2b.md  qwen3.5-4b.md
pac1-coder/: .env.example  .gitignore  .secrets.example  CHANGELOG.md  CLAUDE.md  main.py  models.json  models.json.example  (+2 more)
pac1-py/: .env  .env.example  .gitignore  .secrets.example  CLAUDE.md  Makefile  README.md  agent.py  main.py  main_universal.py  models.json  models.json.example  optimize_prompts.py  pyproject.toml
pac1-py/agent/: __init__.py  classifier.py  code_loop.py  dispatch.py  dspy_examples.py  dspy_lm.py  evaluator.py  log_compaction.py  loop.py  models.py  prephase.py  prompt.py  prompt_builder.py  security.py  tracer.py
pac1-py/agent_universal/: __init__.py  dispatch.py  loop.py  models.py  prephase.py  prompt.py
pac1-py/bitgn/: harness_pb2.py
pac1-py/bitgn/vm/: pcm_connect.py  pcm_pb2.py
pac1-py/data/: dspy_eval_examples.jsonl  dspy_examples.jsonl  dspy_synthetic.jsonl  evaluator_program.json  optimize_runs.jsonl  prompt_builder_capture_program.json  prompt_builder_default_program.json  prompt_builder_email_program.json  prompt_builder_inbox_program.json  prompt_builder_lookup_program.json  prompt_builder_program.json  prompt_builder_queue_program.json
pac1-py/docs/: architecture-review.md  evaluator.md  harness-analysis.md
pac1-py/docs/architecture/: README.md  overview.yaml
pac1-py/docs/architecture/diagrams/: data-flow-agent-execution.md  data-flow-llm-dispatch.md  dependency-graph.md
pac1-py/proto/bitgn/: harness.proto
pac1-py/proto/bitgn/vm/: pcm.proto
pac1-py/tests/: conftest.py  test_classifier.py  test_evaluator.py
sandbox/py/: .gitignore  README.md  agent.py  agent.py.backup  main.py  main_universal.py  pyproject.toml
sandbox/py/agent_universal/: __init__.py  dispatch.py  helpers.py  loop.py  models.py  prephase.py  prompt.py
sandbox/py/bitgn/: _connect.py  harness_connect.py
sandbox/py/bitgn/vm/: mini_connect.py  mini_pb2.py
sandbox/py/proto/bitgn/vm/: mini.proto
(+36 files in other folders)
