[project]
name = "bitgn-sandbox-py"
version = "0.1.0"
description = "Runnable Python sample for the BitGN sandbox benchmark"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "connect-python>=0.8.1",
    "protobuf>=4.25.0",
    "httpx>=0.27.0",
    "openai>=2.26.0",
    "pydantic>=2.12.5",
]

[tool.uv]
# AICODE-NOTE: `harness_core/sdk-tests/sdk-python.sh` rewrites the Buf SDK pins
# in this file after `buf push`; keep this project flat so the sample stays
# runnable without packaging ceremony.
# AICODE-NOTE: Keep this sample as a flat runnable checkout, not an installable package;
# `uv run python main.py` should use the local files directly without editable-build discovery.
package = false
